--- a/utama.html
+++ b/utama.html
@@ -10,7 +10,7 @@
       height: 100vh;
       margin: 0;
       overflow: hidden;
-      background-image: url('/image/P1.jpeg');
+      background-image: url('/P1.jpeg');
       background-size: cover;
       background-position: center;
       display: flex;
