--- a/hadiah.html
+++ b/hadiah.html
@@ -100,7 +100,7 @@
     });
 
     closeBtn.addEventListener('click', () => {
-      window.location.href = 'utama.html';
+      window.location.href = 'index.html';
     });
   </script>
 
