--- a/hadiah.html
+++ b/hadiah.html
@@ -12,7 +12,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Courier New', monospace;
-      background-image: url('/P2.jpeg');
+      background-image: url('P2.jpeg');
       display: flex;
       justify-content: center;
       align-items: center;
