--- a/hadiah.html
+++ b/hadiah.html
@@ -13,6 +13,8 @@
       padding: 0;
       font-family: 'Courier New', monospace;
       background-image: url('P2.jpeg');
+      background-size: cover;
+      background-position: center;
       display: flex;
       justify-content: center;
       align-items: center;
